--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,7 @@ BOT_TOKEN=5817402063:AAGtRHa9-3-xJ6MSz0-4YtNDz-y9ggwiGsQ
 DURATION_LIMIT=999
 MONGO_DB_URI=mongodb+srv://rotan:monyet@cluster0.greiawr.mongodb.net/?retryWrites=true&w=majority
 LOG_GROUP_ID=-1001834916827
-MUSIC_BOT_NAME=Otan Cabul
+MUSIC_BOT_NAME=OtanCabul
 OWNER_ID=5658910455
 AUTO_LEAVING_ASSISTANT=True
 PRIVATE_BOT_MODE=False
